# registracustas

./: README.md  app.py  pyproject.toml
.streamlit/: config.toml
assets/: RegistroGastosHotelBravo.xlsx
utils/: class_google_sheets.py  class_identifica_alcool.py  class_tratamento_excel.py  class_tratamento_imagens.py  class_tratamento_pdf.py  variables.py
